Ignore the shift and ctrl modifier if no select anchor is available during multiselection of register items.

BUG: 240831

svn path=/trunk/extragear/office/kmymoney/; revision=1137117