kmymoney/widgets/register.cpp
@@ -1507,7 +1507,8 @@ void Register::selectItem(RegisterItem* item, bool dontChangeSelections)
     }
 
     if (buttonState & Qt::LeftButton) {
-      if (!(buttonState & (Qt::ShiftModifier | Qt::ControlModifier))) {
+      if (!(buttonState & (Qt::ShiftModifier | Qt::ControlModifier))
+          || (m_selectAnchor == 0)) {
         if ((cnt != 1) || ((cnt == 1) && !item->isSelected())) {
           emit aboutToSelectItem(item, okToSelect);
           if (okToSelect) {
